--- a/src/templates/screens/help/UserIssues.vm
+++ b/src/templates/screens/help/UserIssues.vm
@@ -1,21 +1,22 @@
-<div class="docs" id="userissue"> 
-  <div id="toc"> 
+<div class="docs" id="userissue">
+  <div id="toc">
     <ul>
-      <li>$l10n.ScarabHelp 
+      <li>$l10n.ScarabHelp
         <ul>
           <li><a href="$link.setPage("help,Introduction.vm")">$l10n.IntroToScarab</a> </li>
-          <li>$l10n.ManagingIssues 
+          <li>$l10n.ManagingIssues
             <ul>
-              <li><strong>$l10n.Overview</strong> 
+              <li><strong>$l10n.Overview</strong>
                 <ul>
                   <li><a href="#types">$l10n.IssueTypes</a></li>
                   <li><a href="#attributes">$l10n.IssueAttributes</a></li>
                   <li><a href="#entry">$l10n.IssueEntryScreen</a></li>
+                  <li><a href="#xml">$l10n.XMLImportExport</a></li>
                 </ul>
               </li>
               <li><a href="$link.setPage("help,UserIssueEntry.vm")">$l10n.EnteringIssues </a> </li>
               <li><a href="$link.setPage("help,UserIssueTemplates.vm")">$l10n.UsingTemplates</a></li>
-              <li><a href="$link.setPage("help,UserIssueModify.vm")">$l10n.ModifyingIssues</a></li>
+              <li><a href="$link.setPage("help,UserIssueModify.vm")">$l10n.ModifyingIssues</a></li
             </ul>
           <li><a href="$link.setPage("help,UserQuery.vm")">$l10n.SearchingDatabase </a></li>
           <li><a href="$link.setPage("help,UserReports.vm")">$l10n.HelpReports</a> </li>
@@ -30,24 +31,16 @@
   <p>$l10n.OverviewPara</p>
 
   <ul>
-    <li> 
-  <strong>$l10n.Relationships</strong> $l10n.RelationshipsDef
-   
-  </li>
-    <li> 
- <strong>$l10n.Voting</strong> $l10n.VotingDef
-  </li>
-    <li> 
-    <strong>$l10n.ChangeTracking</strong> $l10n.ChangeTrackingDef  </li>
-    <li> 
-  <strong>$l10n.CommentViewing</strong> $l10n.CommentViewingDef
-  </li>
+    <li><strong>$l10n.Relationships</strong> $l10n.RelationshipsDef</li>
+    <li><strong>$l10n.Voting</strong> $l10n.VotingDef</li>
+    <li><strong>$l10n.ChangeTracking</strong> $l10n.ChangeTrackingDef</li>
+    <li><strong>$l10n.CommentViewing</strong> $l10n.CommentViewingDef</li>
     <li><strong>$l10n.SaveFrequentInfo</strong> $l10n.SaveFrequentInfoDef</li>
   </ul>
 
   <h3><a name="types" id="types"></a>$l10n.IssueTypes </h3>
   <p>$l10n.IssueTypesP1</p>
-  
+
   <p>$l10n.IssueTypesP2</p>
   <h3><a name="attributes" id="attributes"></a>$l10n.IssueAttributes</h3>
   <p>$l10n.IssueAttributesP1</p>
@@ -56,7 +49,7 @@
   <p>$l10n.IssueAttributesP4 <a href="$link.setPage("help,Navigation.vm")#customizing">$l10n.CustomizingTheScreen</a>.</p>
   <h3><a name="entry" id="entry">$l10n.IssueEntryScreen</a>.</h3>
   <p>$l10n.IssueEntryScreenP1</p>
-  <p>$l10n.IssueEntryScreenP2 <strong>$l10n.Next 
+  <p>$l10n.IssueEntryScreenP2 <strong>$l10n.Next
     </strong> $l10n.IssueEntryScreenP2S2</p>
   <p>$l10n.IssueEntryScreenP3 <a href="$link.setPage("help,UserIssueEntry.vm")#attachments">$l10n.Attachments</a>.</p>
   <p>$l10n.IssueEntryScreenP5</p>
@@ -66,6 +59,32 @@
     <li>$l10n.ViewThisIssue</li>
     <li>$l10n.StartPage</li>
   </ul>
-
-<div class="courtesylinks"><p><a href="#toc">$l10n.Top</a></div>   
+  <h3><a name="xml" id="xml">$l10n.XMLImportExport</h3>
+  <p>$l10n.XMLImportExportP1</p>
+  <p><a name="export" id="export"><strong>$l10n.ExportingIssues</strong></a></p>
+  <p>$l10n.ExportingIssuesP1</p>
+  <p>$l10n.ExportingIssuesP2</p>
+  <p>$l10n.ExportingIssuesP3</p>
+  <ol>
+    <li>$l10n.ClickThe <strong>$l10n.XMLExportIssues</strong> $l10n.ExportingIssuesP3B1</li>
+    <li>$l10n.ExportingIssuesP3B2</li>
+    <li>$l10n.ExportingIssuesP3B3</li>
+    <li>$l10n.ClickThe <strong>$l10n.Export</strong> $l10n.IssueEntryP26S2</li>
+  </ol>
+  <p><a name="import" id="import"><strong>$l10n.ImportingIssues</strong></a></p>
+  <p>$l10n.ImportingIssuesP1</p>
+  <p>$l10n.ImportingIssuesP2</p>
+  <ul>
+    <li><em>$l10n.Domain</em>$l10n.Colon $l10n.ImportingIssuesP2B1</li>
+    <li><em>$l10n.Name</em>$l10n.Colon $l10n.ImportingIssuesP2B2</li>
+    <li><em>$l10n.Code</em>$l10n.Colon $l10n.ImportingIssuesP2B3</li>
+  </ul>
+  <p>$l10n.ImportingIssuesP3</p>
+  <p>$l10n.ImportingIssuesP4</p>
+  <ol>
+    <li>$l10n.ClickThe <strong>$l10n.XMLImportIssues</strong> $l10n.ExportingIssuesP3B1</li>
+    <li>$l10n.ImportingIssuesP4B1</li>
+    <li>$l10n.ClickThe <strong>$l10n.Import</strong> $l10n.IssueEntryP26S2</li>
+  </ol>
+ <div class="courtesylinks"><p><a href="#toc">$l10n.Top</a></div>
   </div>
