--- a/src/templates/screens/reports/EditGroups.vm
+++ b/src/templates/screens/reports/EditGroups.vm
@@ -100,7 +100,7 @@
  #indexedRows($velocityCount)
  <td><input type="checkbox" name="selectgroup" value="$index" /></td>
  <td>Group $velocityCount</td>
- <td><input type="text" value="$!data.Parameters.getString("groupname_$index", $group.Name)"
+ <td><input type="text" value="$group.Name"
           name="groupname_$index" /></td>
  </tr>
  #set ($finalCount = $velocityCount + 1)
