issue type link in ModuleQuery.vm changes current issue type leading to a couple issues Issue number: 19012 - if there are no active issue types, clicking the link will show links in the left nav that otherwise are not available. Issue number: 18365 - running a query after clicking the a link to an inactive issue type will run the query against an active issue type.
The link for a given issue type on ModuleQuery tab was meant to function as a
shortcut that should work the same as checking the checkbox (and only one
checkbox) next to the artifact and click Go button.  It should not have the side
effect of opening up navigation elements that would not otherwise be available.

Modified file:
* src/templates/screens/home/ModuleQuery.vm - give the link the same parameters
  that using the form would. Also shortened a boolean variable initialization.

Reviewed by: venkat

--- a/src/templates/screens/home/ModuleQuery.vm
+++ b/src/templates/screens/home/ModuleQuery.vm
@@ -23,11 +23,8 @@
 </div>
 
 <div class="colbar">
-  #set ($checked = false)
   #set ($queryType = $data.Parameters.getString("querytype",""))
-  #if ($queryType.equals("custom") || $queryType.length() == 0)
-      #set ($checked = true)
-  #end
+  #set ($checked = $queryType.equals("custom") || $queryType.length() == 0)
   <div><input type="radio" name="querytype" value="custom" 
        #if ($checked)checked="checked"#end />&nbsp;
     <strong>$l10n.QuerySelected$l10n.Colon</strong> $l10n.QuerySelectedDesc
@@ -77,7 +74,8 @@
           onclick="allit.checked=false" #checked($checked) />
       #set ($checked = false)
     </td>
-    <td><a href="$link.setPage("AdvancedQuery.vm").addPathInfo($scarabG.Constant.NEW_ISSUE_TYPE, $rmit.IssueType.QueryKey).addPathInfo($scarabG.Constant.NEXT_TEMPLATE, "AdvancedQuery.vm").setAction("SelectIssueType")">$rmit.DisplayName</a></td>
+
+    <td><a href="$link.setPage("AdvancedQuery.vm").addPathInfo("querytype", "custom").addPathInfo("rmit_id", "$rmit.QueryKey").setAction("ModuleQuery")">$rmit.DisplayName</a></td>
     <td>$rmit.DisplayDescription</td>
   </tr>
 #end
