* src/conf/intake.xml   Report.Format: New field which denotes a report's display format   (e.g. web, Excel, TSV, etc.).
* src/java/org/tigris/scarab/actions/ConfigureReport.java
  Improved organization of imports.

  doGeneratereport(): Handle both Intake and CGI methods of parameter
  passing.  Fall back to persisted report format.

  getIntakeReportGroup(): New private method which retrieves the
  Intake Group defined for "Report".  Replaced duplicate code
  throughout.

* src/java/org/tigris/scarab/reports/ReportBridge.java
  getFormat()/setFormat(): Accessor and mutator JavaBean methods for
  report format which are used by templates.

  populate(): Only log the XML definition of a report if the log level
  is set to DEBUG.

* src/java/org/tigris/scarab/reports/ReportDefinition.java
  Moved XML sample from header JavaDoc into the new src/dtd/report.dtd
  file.

  getFormat()/setFormat(): Accessor and mutator JavaBean methods for
  report format which are used by Betwixt.

  toXmlString(): Set initial buffer size to 1024.

* src/templates/macros/GlobalMacros.vm
  #exportFormatsRow(): Parameterized macro with $paramName and $format
  arguments.

* src/templates/screens/reports/Info.vm
* src/templates/macros/AdvancedQueryMacro.vm
  Updated calls to #exportFormatsRow() with the appropriate arguments.

Issue: PCN17852
Reviewed by: John McNally

--- a/src/templates/macros/AdvancedQueryMacro.vm
+++ b/src/templates/macros/AdvancedQueryMacro.vm
@@ -301,7 +301,7 @@ $l10n.From:&#160;<input type="text" size="20"
 #resultsPerPageRadioSelect($data.getParameters().getInt("resultsperpage", 25) true)
 </td>
 </tr>
-#exportFormatsRow()
+#exportFormatsRow('format' $data.Parameters.getString('format', ''))
 </table>
 </div>
 
