--- a/src/templates/screens/reports/Info.vm
+++ b/src/templates/screens/reports/Info.vm
@@ -49,7 +49,7 @@ $data.User.setCurrentMITList($report.getMITList())
      $l10n.Personal
    #end
   </tr>
-  #exportFormatsRow()
+  #exportFormatsRow($intakeReport.Format.Key "$!report.Format")
  </table>
 </div>
 
