--- a/src/templates/screens/help/UserQueryAdvanced.vm
+++ b/src/templates/screens/help/UserQueryAdvanced.vm
@@ -29,7 +29,7 @@
   </div>
   <p> 
   <h3><a name="top" id="top"></a>$l10n.AdvancedQueries</h3>
-  <p>$l10n.UQAP1 <strong>$l10n.Submit</strong> $l10n.UQAP1S2</p>
+  <p>$l10n.UQAP1 $l10n.UQAP1S2 <strong>$l10n.NewModuleQuery</strong> $l10n.UQAP1S3 <strong>$l10n.Submit</strong> $l10n.UQAP1S4</p>
   <p>$l10n.UQAP2</p>
   <ul>
     <li>$l10n.SearchKnowledgeBase</li>
@@ -40,10 +40,10 @@
   <p>$l10n.UQAP3</p>
 
   <h3><a name="knowledge" id="knowledge"></a>$l10n.SearchingKnowledge</h3>
-  <p>$l10n.The <em>$l10n.SearchKnowledgeBase</em> $l10n.UQAP4</p>
+  <p>$l10n.The <strong>$l10n.SearchKnowledgeBase</strong> $l10n.UQAP4</p>
   <p>$l10n.UQAP5</p>
   <h3><a name="personnel" id="personnel">$l10n.SearchingPerson</a></h3>
-  <p>$l10n.UQAP6</p>
+  <p>$l10n.The <strong>$l10n.PersonnelSearch</strong> $l10n.UQAP6</p>
   <h3><a name="state" id="state">$l10n.SearchingChange</a> </h3>
   $l10n.UQAP7
   
