--- a/src/templates/screens/help/UserQueryCustom.vm
+++ b/src/templates/screens/help/UserQueryCustom.vm
@@ -25,7 +25,7 @@
   <h3><a name="top" id="top">$l10n.CustomQueries</a></h3>
   <p>$l10n.UQCP1</p>
   <p>$l10n.UQCP2S1
-    <em>$l10n.SummaryDescr</em> $l10n.and <em>$l10n.ErrorMessage</em> $l10n.UQCP3</p>
+    <strong>$l10n.SummaryDescr</strong> $l10n.and <strong>$l10n.ErrorMessage</strong> $l10n.UQCP3</p>
   <p>$l10n.UQCP4</p>
 <div class="courtesylinks"><p><a href="#toc">$l10n.Top</a></div>
 
