--- a/src/templates/screens/help/UserQuerySaved.vm
+++ b/src/templates/screens/help/UserQuerySaved.vm
@@ -32,21 +32,21 @@
   <p>$l10n.UQSP1</p>
   <p><strong><a name="saving">$l10n.SavingQueries</a></strong></p>
   <p>$l10n.UQSP2S1<strong>$l10n.AdvancedQueries</strong> $l10n.UQSP2S2
-    <strong>$l10n.SaveThisQuery</strong> $l10n.UQSP2S3<em>$l10n.SavedQueries</em> $l10n.UQSP2S4</p>
+    <strong>$l10n.SaveThisQuery</strong> $l10n.UQSP2S3<strong>$l10n.SavedQueries</strong> $l10n.UQSP2S4</p>
   <p>$l10n.The <strong>$l10n.SaveQuery</strong> $l10n.UQSP3</p>
   <p>$l10n.UQSP4</p>
   <p>$l10n.UQSP5</p>
   <p>$l10n.ClickThe <strong>$l10n.Save</strong> $l10n.UQSP6</p>
   <p><strong><a name="managing" id="managing">$l10n.ManagingQueries</a></strong></p>
-  <p>$l10n.The <strong>$l10n.StoredQuery</strong> $l10n.UQSP6S1<em>$l10n.Initiatedby</em> 
+  <p>$l10n.The <strong>$l10n.StoredQuery</strong> $l10n.UQSP6S1<strong>$l10n.Initiatedby</strong> 
     $l10n.UQSP6S2</p>
   <p>$l10n.UQSP7</p>
   <ul>
-    <li>$l10n.The <strong>$l10n.Copy</strong> $l10n.UQSP8</li>
+    <li>$l10n.The <strong>$l10n.CopySelected</strong> $l10n.UQSP8</li>
     <li>$l10n.The <strong>$l10n.DeleteSelected</strong> $l10n.UQSP9</li>
   </ul>
   <!--<p><strong><a name="subscribing" id="subscribing"> $l10n.SubscribingQueries</a></strong></p>
-  <p>$l10n.UQSP10S1 <em>$l10n.SavedQueries</em> $l10n.UQSP10S2 <em>$l10n.Subscr</em> $l10n.UQSP10S3 <em>$l10n.SubscrFreq</em> $l10n.UQSP10S4</p>
+  <p>$l10n.UQSP10S1 <strong>$l10n.SavedQueries</strong> $l10n.UQSP10S2 <strong>$l10n.Subscr</strong> $l10n.UQSP10S3 <strong>$l10n.SubscrFreq</strong> $l10n.UQSP10S4</p>
   <p>$l10n.UQSP11</p>
   <p>$l10n.UQSP12</a></strong></p>-->
   
