The Buttons <save this query> And <Refine Query> should not disappear when:
1. Sorting the Issue List based on any of the issue attributes.
2. Clicking the 'Add/remove user attributes' hyperlink, configure attributes and
coming back to the Issue List page.
3. Going to the 'next'/'prev' page, when the number of issues are more than the
'maximum items per page' setting.

Files changed:

1.scarab/src/templates/screens/IssueList.vm
*For all the hyperlinked navigation elements available for the Issue list, 'searchType' was added to the link path.
This would address the problem of buttons disappearing when
(a)sorting the issue list based on a particular issue attribute
(b)navigating to other related pages and coming back (in conjunction with the changes mentioned for other files)
* Also the call to the macro 'paginate' was replaced by the call to the newly defined macro 'paginateIssueList'

2.scarab/src/templates/screens/ConfigureIssueList.vm
Added a hidden parameter 'searchType'.
This would address the problem of buttons disappearing when going back to 'IssueList.vm' from 'ConfigureIssueList.vm'

3.scarab/src/templates/macros/GlobalMacros.vm
Created a new macro "paginateIssueList' inline with 'paginate' to have an additional parameter'searchType'.
This would address the problem of buttons disappearing when moving from one page to another Issue List page.


Issue :PCN19151
Reviewed/Tested by: Kevin Maples
Committed by: Venkat

--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -403,6 +403,20 @@
  </p>
 #end
 
+#macro (paginateIssueList $resultsPerPage $pageNum $sortColumn $sortPolarity $searchType)
+ <p class="paginate">
+ #if($scarabR.PrevPage != 0)
+  #set ($prevLink = $link.setPathInfo("resultsperpage", "$resultsPerPage").setPathInfo("pageNum", "$scarabR.PrevPage").setPathInfo("sortColumn", "$sortColumn").setPathInfo("sortPolarity", "$sortPolarity").setPathInfo("searchType", "$searchType").setPage($scarabR.getCurrentTemplate()))
+  <a href="$prevLink">$l10n.PaginatePrevious</a> |
+ #end
+ $pageNum of $scarabR.NbrPages
+ #if ($scarabR.NextPage != 0)
+  #set ($nextLink = $link.setPathInfo("resultsperpage", "$resultsPerPage").setPathInfo("pageNum", "$scarabR.NextPage").setPathInfo("sortColumn", "$sortColumn").setPathInfo("sortPolarity", "$sortPolarity").setPathInfo("searchType", "$searchType").setPage($scarabR.getCurrentTemplate()))
+  | <a href="$nextLink">$l10n.PaginateNext</a>
+ #end
+ </p>
+#end
+
 #macro (paginateWithSearch $resultsPerPage $pageNum $sortColumn $sortPolarity $searchString $searchField $parameters)
  <p class="paginate">
  #if($scarabR.PrevPage != 0)
