Update UML and replace jpg with smaller gif

--- a/src/share/org/apache/struts/taglib/template/package.html
+++ b/src/share/org/apache/struts/taglib/template/package.html
@@ -60,7 +60,7 @@ or HTML fil</li>
     <br>
   </li>
   <li><a name="TagLib_Template_UML_"></a>
-    <img src="doc-files/templateUML.jpg" alt="TagLib Template UML" width="1100" height="323">
+    <img src="doc-files/template.gif" alt="TagLib Template UML">
   </li>
  
 </ul>
